--- a/views/spots/edit.ejs
+++ b/views/spots/edit.ejs
@@ -1,25 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Spot</title>
-</head>
-<body>
-    <h1>Edit Spot</h1>
-    <form action="/spots/<%=spot._id%>?_method=PUT" method="'POST">
-        <div>
-            <label for="title">Title</label>
-            <input type="text" id="title" name="spot[title]" value="<%=spot.title%>">
+<%layout('layouts/boilerplate')%>
+
+
+    
+<div class="row">
+    <h1 class="text-centre">Edit Spot</h1>
+    <div class="col-6 offset-3">
+        <form action="/spots/<%=spot._id%>?_method=PUT" method="'POST">
+            <div class="mb-3">
+                <label class="form-label" for="title">Title</label>
+                <input class="form-control" type="text" id="title" name="spot[title]" value="<%=spot.title%>">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="location">Location</label>
+                <input class="form-control" type="text" id="location" name="spot[location]" value="<%=spot.location%>">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="image">Image URL</label>
+                <input class="form-control" type="text" id="image" name="spot[image]" value="<%=spot.image%>">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="price">Spot price</label>
+                <input class="form-control" type="text" id="price" placeholder="0.00" name="spot[price]" value="<%=spot.price%>">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="description">Description</label>
+                <textarea class="form-control" type="text" id="description" name="spot[description]"> <%=spot.description%></textarea>
+            </div>
+
+            <div class="mb-3">
+                <button class="btn btn-success">update Spot</button>
+            </div>
+
+            
+        </form>
+         <div>\
+            <a href="/spots/<%=spot._id%>">Back To Spots</a>
         </div>
-        <div>
-            <label for="location">Location</label>
-            <input type="text" id="location" name="spot[location]" value="<%=spot.location%>">
-        </div>
-        <button>Update Spot</button>
-    </form>
-    <div>
-        <a href="/spots/<%=spot._id%>">Back To Spots</a>
     </div>
-</body>
-</html>
+</div>
+
+
+    
