--- a/views/spots/index.ejs
+++ b/views/spots/index.ejs
@@ -1,19 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spots</title>
-</head>
-<body>
+<%layout('layouts/boilerplate')%>
     <h1>Spots</h1>
     <div>
         <a href="/spots/new">Add New Spot</a>
     </div>
-    <ul>
+ 
         <%for(let spot of spots){ %>
-            <li><a href="/spots/<%=spot._id%>"><%=spot.title%></a></li>
-        <%}%>
-    </ul>
-</body>
-</html>
+            <div class="card" mb-3>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img class="img-fluid"src="<%=spot.image %>" alt="">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title"><%=spot.title %></h5>
+                            <p class="card-text"><%=spot.description%></p>
+                            <p class="card-text">
+                                <small class="text-muted"><%=spot.location%></small>
+                            </p>
+                            <a class="btn btn-primary"href="/spots/<%=spot._id%>">View Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         <%}%>
+            
