--- a/views/spots/new.ejs
+++ b/views/spots/new.ejs
@@ -1,25 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Spot</title>
-</head>
-<body>
-    <form action="/spots" method="'POST">
-        <div>
-            <label for="title">Title</label>
-            <input type="text" id="title" name="spot[title]">
-        </div>
-        <div>
-            <label for="location">Location</label>
-            <input type="text" id="location" name="spot[location]">
-        </div>
-        <button>Add Spot</button>
-    </form>
-    <div>
+<%layout('layouts/boilerplate')%>
 
-        <a href="/spots">All Spots</a>
+<div class="row">
+    <h1 class="text-centre">New Spot</h1>
+    <div class="col-6 offset-3">
+        <form action="/spots" method="'POST">
+            <div class="mb-3">
+                <label class="form-label" for="title">Title</label>
+                <input class="form-control" type="text" id="title" name="spot[title]">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="location">Location</label>
+                <input class="form-control" type="text" id="location" name="spot[location]">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="image">Image URL</label>
+                <input class="form-control" type="text" id="image" name="spot[image]">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="price">Spot price</label>
+                <input class="form-control" type="text" id="price" placeholder="0.00" name="spot[price]">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="description">Description</label>
+                <textarea class="form-control" type="text" id="description" name="spot[description]"></textarea>
+            </div>
+
+            <div class="mb-3">
+                <button class="btn btn-success">Add Spot</button>
+            </div>
+
+            
+        </form>
+        <div>
+    
+            <a href="/spots">All Spots</a>
+        </div>
     </div>
-</body>
-</html>
+</div>
+
+
+    
