Done Basic Error handling. Define Error templates and done client side form validations

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
-<footer class="footer bg-dark py-3 mt-auto">
+<footer class="footer bg-light py-3 mt-auto">
     <div class="container">
-        <span class="text-muted">&copy, WanderSpot 2023</span>
+        <span class="text-muted">&copy WanderSpot 2023</span>
     </div>
 
 </footer>
