--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -7,7 +7,7 @@
             <img src="<%=spot.image%>"card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"><%=spot.title %></h5>
-              <p class="card-text"><%=spot.descriptoin %></p>
+              <p class="card-text"><%=spot.description %></p>
             </div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item text-muted"><%=spot.location %></li>
