defined Review model and integrated with spot model, added review form and done validations and styling, added review deletion options and finally deleted all reviews if a spot is deleted using delete middleware

--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -2,7 +2,7 @@
 
 
 <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-6 ">
         <div class="card" >
             <img src="<%=spot.image%>"card-img-top" alt="...">
             <div class="card-body">
@@ -19,7 +19,38 @@
                     <button class="btn btn-danger">DELETE</button>
                 </form>
             </div>
-          </div>
+        </div>
+    </div>
+
+
+    <div class="col-6 ">
+          <h2>Leave a Review</h2>
+          <form class="mb-3 needs-validation" action="/spots/<%=spot._id%>/reviews" method="POST" novalidate>
+            <div class="mb-3">
+                <label class="form-label" for="rating">Rating</label>
+                <input type="range" min="1" max="5" name="review[rating]" id="rating">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="body">Review</label>
+                <textarea class="form-control" name="review[body]" id="" cols="30" rows="3" required></textarea>
+            </div>
+            <button class="btn btn-success">Submit</button>
+          </form>
+
+          <%for(let review of spot.reviews){%>
+
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">Rating: <%=review.rating%></h5>
+                    <p class="card-text">Review: <%=review.body %></p>
+
+                    <form action="/spots/<%=spot._id %>/reviews/<%=review._id%>?_method=DELETE" method="POST">
+                    <button class="btn btn-sm btn-danger">DELETE</button>
+                    </form>
+                  </div>
+            </div>
+          <%}%>
+
     </div>
 </div>
 
