--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -1,6 +1,6 @@
 <%layout('layouts/boilerplate')%>
-
-
+<link rel="stylesheet" href="/stylesheets/stars.css">
+ 
 <div class="row">
     <div class="col-6 ">
         <div class="card" >
@@ -11,6 +11,7 @@
             </div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item text-muted"><%=spot.location %></li>
+              <li class="list-group-item">Spot added by <%=spot.author.username%></li>
               <li class="list-group-item"><%=spot.price %>/night</li>
             </ul>
             <div class="card-body">
@@ -26,9 +27,25 @@
     <div class="col-6 ">
           <h2>Leave a Review</h2>
           <form class="mb-3 needs-validation" action="/spots/<%=spot._id%>/reviews" method="POST" novalidate>
-            <div class="mb-3">
+            <!-- <div class="mb-3">
                 <label class="form-label" for="rating">Rating</label>
                 <input type="range" min="1" max="5" name="review[rating]" id="rating">
+            </div> -->
+            <div class="mb-3">
+            <fieldset class="starability-growRotate">
+                <legend>First rating:</legend>
+                <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+                <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                <label for="first-rate1" title="Terrible">1 star</label>
+                <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                <label for="first-rate2" title="Not good">2 stars</label>
+                <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                <label for="first-rate3" title="Average">3 stars</label>
+                <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                <label for="first-rate4" title="Very good">4 stars</label>
+                <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                <label for="first-rate5" title="Amazing">5 stars</label>
+              </fieldset>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="body">Review</label>
@@ -41,7 +58,11 @@
 
             <div class="card mb-3">
                 <div class="card-body">
-                    <h5 class="card-title">Rating: <%=review.rating%></h5>
+                    <h5 class="card-title"><%=review.author.username%></h5>
+                    <p class="starability-result" data-rating="<%=review.rating%>">
+                        Rated: <%=review.rating%> stars
+                    </p>
+                    <!-- <h6 class="card-subtitle mb-2 text-muted">By <%=review.author.username%></h6> -->
                     <p class="card-text">Review: <%=review.body %></p>
 
                     <form action="/spots/<%=spot._id %>/reviews/<%=review._id%>?_method=DELETE" method="POST">
