--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link "  href="/">Home</a>
+            <a class="nav-link "  href="/home">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/spots">Spots</a>
@@ -17,12 +17,12 @@
           </li>
          
         </ul>
-        <div class="navbar-nav ml-auto">
-          <%if(!currentUser){%>
-          <a class="nav-link" href="/login">Login</a>
-          <a class="nav-link" href="/register">Signup</a>
+        <div class="navbar-nav ms-auto" id="navbarNav">
+          <%if(currentUser){%>
+            <a class="nav-link" href="/logout">Logout</a>
           <%}else{%>
-          <a class="nav-link" href="/logout">Logout</a>
+            <a class="nav-link" href="/login">Login</a>
+            <a class="nav-link" href="/register">Signup</a>
           <%}%>
         </div>
       </div>
